--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="# " type="image/svg+xml" href="H" />
+    <link rel="icon" type="" href="/HireinAbuDhabilogo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script>
       (function (w, d, s, l, i) {
