Added resume and real candidate datas, email in footer,added signaturelogo

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="" href="/hirein-favicon.png" />
+    <link rel="icon" type="image/png" href="/hirein-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
